src/objects/UM_Kenan_NRCReason_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this is used for storing NRC Reasons and corresponding Kenan Codes . Used in Billing Account level adjustments</description>
    <fields>
        <fullName>UM_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Is_Negative_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if the NRC reason is for negative amount</description>
        <label>Is Negative Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Kenan_Code__c</fullName>
        <inlineHelpText>stores Kenan codes</inlineHelpText>
        <label>Kenan Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Kenan_NRC_Reason__c</fullName>
        <inlineHelpText>stores NRC reasons</inlineHelpText>
        <label>Kenan NRC Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Kenan NRC Reasons Mapping</label>
</CustomObject>